deploy/retrieveUnpackaged/objects/RS_Product__c.object
<CustomObject>
    <description>Rackspace products that we would like to track at the opportunity level.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The opportunity the product is attached to.</description>
        <inlineHelpText>Select the opportunity that this product is for.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RS Products</relationshipLabel>
        <relationshipName>RS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Select the product for the opportunity.  Create a new row for multiple products (save this record, click on opportunity name, then click on new button on the product related list).</inlineHelpText>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>R900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R710</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2950MKIII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>385G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2850</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please enter the quantity for the product.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RS Product</label>
    <nameField>
        <label>RS Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>